Update walletpage.html second time

--- a/walletpage.html
+++ b/walletpage.html
@@ -130,12 +130,12 @@
                         </button>
 
                         <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal2" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/4622a2b2d6af1c9844944291e5e7351a6aa24cd7b23099efac1b2fd875da31a0.jpeg" alt="" />
+                            <img class="coin-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn26EgwNk8mtghJEEhRTH8p5sHBTs67f8QGydsukgQ5w&s" alt="" />
                             <h4>Trust</h4>
                         </button>
 
                         <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal4" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/c57ca95b47569778a828d19178114f4db188b89b763c899ba0be274e97267d96.jpeg" alt="" />
+                            <img class="coin-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoAOZNCgNRtRFlXVMfcMnPm2sea5yjitIN7QvEYa4RrA&s" alt="" />
                             <h4>Metamask</h4>
                         </button>
 
@@ -181,7 +181,7 @@
 
 
                         <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/1ae92b26df02f0abca6304df07debccd18262fdf5fe82daa81593582dac9a369.jpeg" alt="" style="border-radius: 40px;" />
+                            <img class="coin-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmEgT039mPM4G3NoV4LobhCeHG7Cx7jawmBr-RDVJMDA&s" alt="" style="border-radius: 40px;" />
                             <h4>Rainbow</h4>
                         </button>
 
@@ -206,7 +206,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal8" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/f2436c67184f158d1beda5df53298ee84abfc367581e4505134b5bcf5f46697d.jpeg" alt="" />
+                            <img class="coin-img" src="https://cryptologos.cc/logos/defichain-dfi-logo.png?v=029" alt="" />
                             <h4>DeFi</h4>
                         </button>
                         <!-- Modal -->
@@ -222,12 +222,12 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal11" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/dceb063851b1833cbb209e3717a0a0b06bf3fb500fe9db8cd3a553e4b1d02137.jpeg" alt="" />
+                            <img class="coin-img" src="https://cryptologos.cc/logos/ontology-ont-logo.png?v=029" alt="" />
                             <h4>ONTO</h4>
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal12" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://registry.walletconnect.org/logo/lg/20459438007b75f4f4acb98bf29aa3b800550309646d375da5fd4aac6c2a2c66.jpeg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="https://cryptologos.cc/logos/pocket-network-pokt-logo.png?v=029" alt="" />
                             <h4>TokenPocket</h4>
                         </button>
                         <!-- Modal -->
@@ -253,7 +253,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal19" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://registry.walletconnect.org/logo/lg/7674bb4e353bf52886768a3ddc2a4562ce2f4191c80831291218ebd90f5f5e26.jpeg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="https://cryptologos.cc/logos/polymath-network-poly-logo.png?v=029" alt="" />
                             <h4>MathWallet</h4>
                         </button>
                         <!-- Modal -->
@@ -340,7 +340,7 @@
                         <!-- Modal -->
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal35" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://registry.walletconnect.org/logo/lg/138f51c8d00ac7b9ac9d8dc75344d096a7dfe370a568aa167eabc0a21830ed98.jpeg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="https://cryptologos.cc/logos/alpha-finance-lab-alpha-logo.png?v=029" alt="" />
                             <h4>AlphaWallet</h4>
                         </button>
                         <!-- Modal -->
@@ -352,7 +352,7 @@
                         <!-- Modal -->
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal37" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/29f4a70ad5993f3f73ae8119f0e78ecbae51deec2a021a770225c644935c0f09.jpeg" alt="" />
+                            <img class="coin-img" src="https://cryptologos.cc/logos/chainlink-link-logo.png?v=029" alt="" />
                             <h4>ZelCore</h4>
                         </button>
                         <!-- Modal -->
@@ -394,7 +394,7 @@
                         <!-- Modal -->
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal45" class="btn coin">
-                            <img class="coin-img" src="https://registry.walletconnect.org/logo/lg/0b415a746fb9ee99cce155c2ceca0c6f6061b1dbca2d722b3ba16381d0562150.jpeg" alt="" />
+                            <img class="coin-img" src="https://cryptologos.cc/logos/safepal-sfp-logo.png?v=029" alt="" />
                             <h4>SafePal</h4>
                         </button>
 
@@ -439,7 +439,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal53" class="btn coin">
-                            <img class="coin-img" src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/ofbdehdu4sju07vlltgf" alt="" />
+                            <img class="coin-img" src="https://cryptologos.cc/logos/keep-network-keep-logo.png?v=029" alt="" />
                             <h4>BitKeep</h4>
                         </button>
 
@@ -484,7 +484,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal63" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://registry.walletconnect.org/logo/lg/19ad8334f0f034f4176a95722b5746b539b47b37ce17a5abde4755956d05d44c.jpeg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_czj3c5XmBxMwGorsA8i9XljzWwKouH5haqQCpa4CmQ&s" alt="" />
                             <h4>Aktionariat</h4>
                         </button>
 
@@ -512,7 +512,7 @@
                         <!-- Modal -->
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal72" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://registry.walletconnect.org/logo/lg/dd8ee41915d967e547c80266e883d77ee808427405f4e8026a85ac1308104221.jpeg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh4570SXJAoxWX6KU3AvhpNj5N8BZZYzKd1N9QY2bPmg&s" alt="" />
                             <h4>Linen</h4>
                         </button>
                         <!-- Modal -->
